[package]
name = "o5m-stream"
version = "1.1.2"
description = "streaming async o5m decoder"
edition = "2018"
license = "BSD-3-Clause"
readme = "readme.md"
repository = "https://github.com/peermaps/o5m-stream.rs"
homepage = "https://github.com/peermaps/o5m-stream.rs"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes","unstable"] }
futures = "0.3.13"
pin-project-lite = "0.2.6"
thiserror = "1.0.24"
